Changelog
=========


1.7.1 (unreleased)
------------------

- Nothing changed yet.


1.7.0 (2015-05-26)
------------------

- Added zip-export integration.
  [lknoepfel]


1.6.3 (2014-12-11)
------------------

- Disable orphan feature.
  [mbaechtold]


1.6.2 (2014-07-11)
------------------

- Fix memberblock width if the referenced contact name is too long.
  [elioschmutz]


1.6.1 (2014-03-25)
------------------

- Remove ManagePortal-permission for language field for a contact-object.
  [elioschmutz]


1.6 (2013-12-13)
----------------

- Change image caption name format (memberblock).
  [mathias.leimgruber]

- Improve Widget for Selection when there are multiple persons with the same name.
  [tschanzt]

- Use UID for searching References. IDs can be used multiple times.
  [tschanzt]

1.5.4 (2013-09-02)
------------------

- Wrap div around memberships in contact view.
  [Julian Infanger]


1.5.3 (2013-05-24)
------------------

- Nothing changed yet.


1.5.2 (2013-05-07)
------------------

- Fixed contact_listing_view template.
  [misch]


1.5.1 (2013-04-23)
------------------

- Added missing translation.
  [Julian Infanger]


1.5 (2013-04-02)
----------------

- Fix address in listing (lastname, firstname).
  [mathias.leimgruber]

- Lawgiver support: map permissions.
  [jone]

- Fixed concatenation of address fields for GeocodableLocation string.
  [lgraf]

- Migrate simplelayout actions.
  [mathias.leimgruber]

- Fix several template issues.
  [mathias.leimgruber]

- Use content-core macro on member view.
  [mathias.leimgruber]

- Use content-core macro on contact view.
  [mathias.leimgruber]

1.4 (2013-01-25)
----------------

- Fix TAL expression in folder contacts listing template.
  [jone]

- Added upgrade step to migrate Contact objects from P.Maps to c.geo.
  [lgraf]

- Moved map viewlet to plone.belowcontentbody.
  [lgraf]

- Enabled automatic geocoding for Contact objects.
  [lgraf]
